--- a/css/WebTour.css
+++ b/css/WebTour.css
@@ -1,10 +1,31 @@
+.webtour-btn {
+  position: fixed;
+}
+
+
 .pulse-button {
+  display: inline-block;
+  border-radius: 50%;
+  box-shadow: 0 0 0 0 #ffa000;
+  background: #ffa000;
   -webkit-animation: pulse 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
   -moz-animation: pulse 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
   -ms-animation: pulse 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
   animation: pulse 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
 }
 
+.pulse-button i {
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  text-align: center;
+  color: #fff;
+  z-index: 999999;
+}
+
+.pulse-button:hover {
+  cursor: pointer;
+}
 
 @-webkit-keyframes pulse {to {box-shadow: 0 0 0 45px rgba(232, 76, 61, 0);}}
 @-moz-keyframes pulse {to {box-shadow: 0 0 0 45px rgba(232, 76, 61, 0);}}
