--- a/css/WebTour.css
+++ b/css/WebTour.css
@@ -38,3 +38,36 @@
   border-radius: 10px;
   margin: 5px
 }
+
+.arrow_box {
+	position: absolute;
+	background: #ffffff;
+	border: 5px solid #ffa000;
+  width: 280px;
+  height: 100px;
+  padding: 10px;
+}
+
+.arrow_box:after, .arrow_box:before {
+	bottom: 100%;
+	left: 50%;
+	border: solid transparent;
+	content: " ";
+	height: 0;
+	width: 0;
+	position: absolute;
+	pointer-events: none;
+}
+
+.arrow_box:after {
+	border-color: rgba(255, 255, 255, 0);
+	border-bottom-color: #ffffff;
+	border-width: 10px;
+	margin-left: -10px;
+}
+.arrow_box:before {
+	border-color: rgba(255, 160, 0, 0);
+	border-bottom-color: #ffa000;
+	border-width: 17px;
+	margin-left: -17px;
+}
