--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -17,6 +17,7 @@
   <body>
     <header>
       <div class="inner">
+        <img src="{{ '/assets/images/gladius_logo.svg' | relative_url }}">
         <a href="{{ '/' | absolute_url }}">
           <h1>{{ site.title | default: site.github.repository_name }}</h1>
         </a>
